[package]
name = "starlux_run"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "starlux_run"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.81"
rustler = "0.31.0"
serde-transcode = "1.1.1"
serde_json = "1.0.114"
serde_rustler = { git = "https://github.com/stevensonmt/serde_rustler/" }
starlark = "0.12.0"
